<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#397BB3"
    android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:background="@drawable/weather_info"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:text="@string/date"
                    android:textColor="#353E4F"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textColor="#353E4F"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_morning"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Day"
                    android:textColor="#353E4F"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_evening"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/evening"
                    android:textColor="#353E4F"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_browser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detailed"
                    android:textColor="#353E4F"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

</FrameLayout>